--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -3,3 +3,5 @@
 @import "./_blocks/_header.less";
 @import "./_blocks/_gamburger.less";
 @import "./_blocks/_header-skills.less";
+@import "./_blocks/_portfolio.less";
+@import "./_blocks/_portfolio-card.less";
