--- a/docs/less/_blocks/_header-skills.less
+++ b/docs/less/_blocks/_header-skills.less
@@ -1,13 +1,16 @@
 .header-skills {
     margin-top: 78px;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 
     @media (min-width: 768px) {
         margin-top: 12px;
+        margin-bottom: 85px;
     }
     
     @media (min-width: 1200px) {
-        margin-top: 29px;
+        padding-top: 100px;
+        margin-top: -114px;
+        margin-bottom: 240px;
     }
 }
 
@@ -128,6 +131,16 @@
         font-size: 18px;
         font-weight: 400;
         border-bottom: 1px solid #000;
+
+        &:hover {
+            color: var(--link);
+            border-bottom: 1px solid var(--link);
+        }
+
+        &:active {
+            color: var(--border);
+            border-bottom: 1px solid var(--border);
+        }
 
         @media (min-width: 768px) {
             font-size: 20px;
