--- a/docs/less/_blocks/_header.less
+++ b/docs/less/_blocks/_header.less
@@ -13,26 +13,24 @@
     }
 }
 
-.header {
-    &::before {
-        content: "";
-        position: absolute;
-        display: block;
-        top: -100%;
-        left: -100%;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 15;
-        transition: 0.3s;
+.header-overlay {
+    position: fixed;
+    z-index: 15;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transform: translate(-100%,-100%);
+    transition: 0.3s;
+
+    @media (min-width: 1200px) {
+        display: none;
     }
 }
 
-.header.active {
-    &::before {
-        top: 0;
-        left: 0;
-    }
+.header-overlay.active {
+    transform: translate(0,0);
 }
 
 .header-main {
@@ -62,7 +60,7 @@
     font-size: 42px;
     font-weight: 900;
     transition: 0.3s ease-in;
-    margin-right: 21px;
+    margin-right: 15px;
 
     &::after {
         height: 10px;
@@ -93,14 +91,14 @@
 
         &::after {
             bottom: 2px;
-            left: 0;
+            left: -5;
             width: 0;
             height: 5px;
             transition: 0.5s;   
         }
 
         &:hover::after, &:active::after {
-            width: 100%;
+            width: 112%;
         }
 
         &:focus {
@@ -119,31 +117,36 @@
     }
 
     a {
-        width: 30px;
         height: 100%;
-        margin-right: 19px;
+        margin-right: 18px;
         padding-top: 7px;
+        transition: 0.3s;  
 
         &:last-child {
-            width: 32px;
             margin-right: 0;
         }
     }
 }
 
 .icon-instagram {
+    width: 30px;
+
     &:hover, &:active {
         color: #0077b5;
     }
 }
 
 .icon-github {
+    width: 30px;
+
     &:hover, &:active {
         color: #6cc644;
     }
 }
 
 .icon-vk {
+    width: 36px;
+
     &:hover, &:active {
         color: #45668e;
     }
@@ -198,14 +201,14 @@
 
     span.underline {
         &::after {
-            bottom: 8px;
+            bottom: 4px;
 
             @media (min-width: 768px) {
-                bottom: 12px;
+                bottom: 7px;
             }
             
             @media (min-width: 1200px) {
-                bottom: 23px;
+                bottom: 14px;
             }
         }
     }
@@ -263,25 +266,26 @@
     }
 
     @media (min-width: 1200px) {
-        position: relative;
         z-index: 9;
         height: auto;
         margin-top: 26px;
         background-image: url(../img/main/foto-deck.jpg);
         background-repeat: no-repeat;
         background-position: right;
+    }
+}
 
-        &::after {
-            position: absolute;
-            content: "";
-            width: 460px;
-            height: 410px;
-            right: -140px;
-            bottom: -130px;
-            background-image: -webkit-linear-gradient( 90deg, rgb(244,248,249) 0%, rgba(244,248,249,0) 100%);
-            opacity: 0.5;
-            z-index: 1;              
-        }
+.header-foto-overlay {
+    @media (min-width: 1200px) {
+        position: absolute;
+        content: "";
+        width: 460px;
+        height: 410px;
+        right: -140px;
+        bottom: -130px;
+        background-image: -webkit-linear-gradient( 90deg, rgb(244,248,249) 0%, rgba(244,248,249,0) 100%);
+        opacity: 0.5;
+        z-index: 1;       
     }
 }
 
@@ -296,7 +300,6 @@
     }
     
     @media (min-width: 1200px) {
-        margin-top: -87px;
-        transform: scale(1.1);
+        margin-top: -128px;
     }
 }
