--- a/docs/less/_blocks/_header.less
+++ b/docs/less/_blocks/_header.less
@@ -6,7 +6,7 @@
     transition: 0.3s;
 
     @media (min-width: 1200px) {
-        background-image: url(../img/main/lines-header.jpg);
+        background-image: url(../img/main/header/lines-header.jpg);
         background-size: auto;
         background-position: center;
         background-repeat: repeat-y;
@@ -253,7 +253,7 @@
 }
 
 .header-foto {
-    background-image: url(../img/main/foto.jpg);
+    background-image: url(../img/main/header/foto.jpg);
     background-repeat: no-repeat;
     width: 100%;
     height: 290px;
@@ -269,7 +269,7 @@
         z-index: 9;
         height: auto;
         margin-top: 26px;
-        background-image: url(../img/main/foto-deck.jpg);
+        background-image: url(../img/main/header/foto-deck.jpg);
         background-repeat: no-repeat;
         background-position: right;
     }
