--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -183,6 +183,7 @@ button {
   height: 50px;
   width: 50px;
   margin-right: 25px;
+  transition: 0.3s;
 }
 .social a:last-child {
   margin-right: 0;
@@ -282,7 +283,7 @@ button {
 }
 @media (min-width: 1200px) {
   .header {
-    background-image: url(../img/main/lines-header.jpg);
+    background-image: url(../img/main/header/lines-header.jpg);
     background-size: auto;
     background-position: center;
     background-repeat: repeat-y;
@@ -511,7 +512,7 @@ button {
   }
 }
 .header-foto {
-  background-image: url(../img/main/foto.jpg);
+  background-image: url(../img/main/header/foto.jpg);
   background-repeat: no-repeat;
   width: 100%;
   height: 290px;
@@ -529,7 +530,7 @@ button {
     z-index: 9;
     height: auto;
     margin-top: 26px;
-    background-image: url(../img/main/foto-deck.jpg);
+    background-image: url(../img/main/header/foto-deck.jpg);
     background-repeat: no-repeat;
     background-position: right;
   }
@@ -1064,5 +1065,206 @@ button {
   .portfolio-card-big p {
     font-size: 22px;
   }
+}
+.section-work {
+  padding-top: 54px;
+  padding-bottom: 15px;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .section-work {
+    padding-top: 80px;
+    padding-bottom: 87px;
+  }
+}
+@media (min-width: 1200px) {
+  .section-work {
+    padding-top: 136px;
+    padding-bottom: 112px;
+    background-image: url(../img/main/work/work-bg.jpg);
+    background-size: auto;
+    background-position: center;
+    background-repeat: repeat-y;
+  }
+}
+.section-work h2 {
+  margin-bottom: 50px;
+  font-size: 38px;
+}
+@media (min-width: 768px) {
+  .section-work h2 {
+    margin-bottom: 156px;
+    font-size: 52px;
+  }
+}
+@media (min-width: 1200px) {
+  .section-work h2 {
+    font-size: 64px;
+  }
+}
+.section-work .underline::after {
+  bottom: 2px;
+}
+@media (min-width: 768px) {
+  .section-work .underline::after {
+    bottom: 5px;
+  }
+}
+.work-timeline {
+  max-width: 1005px;
+  margin: 0 auto;
+}
+.work-timeline-row {
+  position: relative;
+  width: 100%;
+  min-height: 167px;
+  padding-left: 102px;
+  padding-bottom: 50px;
+}
+.work-timeline-row::after {
+  content: "";
+  width: 4px;
+  border-radius: 2px;
+  background-color: #e1eef4;
+  position: absolute;
+  top: 94px;
+  bottom: 0px;
+  left: 35px;
+}
+.work-timeline-row:last-of-type::after {
+  display: none;
+}
+@media (min-width: 768px) {
+  .work-timeline-row {
+    width: 50%;
+    padding-left: 69px;
+    padding-bottom: 0px;
+    min-height: 203px;
+  }
+  .work-timeline-row:nth-child(even) {
+    margin-left: auto;
+  }
+  .work-timeline-row:nth-child(even) .work-timeline-img {
+    transform: translateX(-50%);
+  }
+  .work-timeline-row:nth-child(even)::after {
+    left: -2px;
+  }
+  .work-timeline-row:nth-child(odd) {
+    padding-left: 0;
+    padding-right: 69px;
+  }
+  .work-timeline-row:nth-child(odd) .work-timeline-img {
+    left: auto;
+    right: 0;
+    transform: translateX(50%);
+  }
+  .work-timeline-row:nth-child(odd)::after {
+    left: auto;
+    right: -2px;
+  }
+  .work-timeline-row:nth-child(odd) .work-timeline-desc {
+    text-align: right;
+  }
+}
+@media (min-width: 1200px) {
+  .work-timeline-row {
+    padding-left: 85px;
+  }
+  .work-timeline-row:nth-child(odd) {
+    padding-right: 79px;
+  }
+}
+.work-timeline-row + .work-timeline-row {
+  margin-top: 16px;
+}
+@media (min-width: 768px) {
+  .work-timeline-row + .work-timeline-row {
+    margin-top: 23px;
+  }
+}
+@media (min-width: 1200px) {
+  .work-timeline-row + .work-timeline-row {
+    margin-top: 27px;
+  }
+}
+.work-timeline-desc {
+  padding-top: 2px;
+  text-align: start;
+}
+@media (min-width: 768px) {
+  .work-timeline-desc {
+    padding-top: 25px;
+  }
+}
+@media (min-width: 1200px) {
+  .work-timeline-desc {
+    padding-top: 19px;
+  }
+}
+.work-timeline-desc h3 {
+  margin-bottom: 9px;
+  font-size: 20px;
+  font-weight: 800;
+}
+@media (min-width: 768px) {
+  .work-timeline-desc h3 {
+    font-size: 24px;
+    margin-bottom: 8px;
+  }
+}
+@media (min-width: 1200px) {
+  .work-timeline-desc h3 {
+    font-size: 26px;
+  }
+}
+.work-timeline-desc .underline::after {
+  display: none;
+}
+@media (min-width: 1200px) {
+  .work-timeline-desc .underline::after {
+    display: block;
+    height: 5px;
+    bottom: 3px;
+  }
+}
+.work-timeline-desc p {
+  margin-bottom: 7px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.429;
+}
+@media (min-width: 768px) {
+  .work-timeline-desc p {
+    font-size: 16px;
+    margin-bottom: 9px;
+  }
+}
+@media (min-width: 1200px) {
+  .work-timeline-desc p {
+    font-size: 18px;
+  }
+}
+p.work-timeline-time {
+  margin-bottom: 0;
+  font-weight: 700;
+  line-height: 1.2;
+}
+@media (min-width: 768px) {
+  p.work-timeline-time {
+    font-size: 18px;
+  }
+}
+.work-timeline-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 74px;
+  height: 74px;
+  border-radius: 28px;
+  box-shadow: 0px 3px 35px 0px rgba(0, 112, 187, 0.35);
 }
 /*# sourceMappingURL=main.css.map */
