--- a/docs/less/_blocks/_base.less
+++ b/docs/less/_blocks/_base.less
@@ -194,6 +194,7 @@ button {
         height: 50px;
         width: 50px;
         margin-right: 25px;
+        transition: 0.3s;
 
         &:last-child {
             margin-right: 0;
