--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -5,3 +5,4 @@
 @import "./_blocks/_header-skills.less";
 @import "./_blocks/_portfolio.less";
 @import "./_blocks/_portfolio-card.less";
+@import "./_blocks/_section-work.less";
