--- a/docs/less/_blocks/_base.less
+++ b/docs/less/_blocks/_base.less
@@ -63,8 +63,12 @@ svg {
     max-width: 100%;
 }
 
-button, input {
+button, input, textarea {
     outline: none;
+}
+
+textarea {
+    resize: none;
 }
 
 button {
