--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -6,3 +6,6 @@
 @import "./_blocks/_portfolio.less";
 @import "./_blocks/_portfolio-card.less";
 @import "./_blocks/_section-work.less";
+@import "./_blocks/_section-contacts.less";
+@import "./_blocks/_contacts-form.less";
+@import "./_blocks/_footer.less";
