--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -60,8 +60,12 @@ svg {
   max-width: 100%;
 }
 button,
-input {
+input,
+textarea {
   outline: none;
+}
+textarea {
+  resize: none;
 }
 button {
   display: inline-block;
@@ -1202,6 +1206,9 @@ button {
   padding-top: 2px;
   text-align: start;
 }
+.work-timeline-desc:hover .underline::after {
+  background-color: var(--border);
+}
 @media (min-width: 768px) {
   .work-timeline-desc {
     padding-top: 25px;
@@ -1230,6 +1237,7 @@ button {
 }
 .work-timeline-desc .underline::after {
   display: none;
+  transition: 0.5s;
 }
 @media (min-width: 1200px) {
   .work-timeline-desc .underline::after {
@@ -1276,5 +1284,359 @@ p.work-timeline-time {
   height: 74px;
   border-radius: 28px;
   box-shadow: 0px 3px 35px 0px rgba(0, 112, 187, 0.35);
+}
+.section-contacts {
+  position: relative;
+  overflow: hidden;
+  background-color: #f4f8f9;
+  padding-top: 48px;
+  padding-bottom: 60px;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .section-contacts {
+    padding-top: 77px;
+    padding-bottom: 85px;
+  }
+}
+@media (min-width: 1200px) {
+  .section-contacts {
+    padding-top: 134px;
+    padding-bottom: 150px;
+    background-image: url(../img/main/contacts/contacts-bg.jpg);
+    background-size: auto;
+    background-position: center;
+    background-repeat: repeat-y;
+  }
+}
+.section-contacts h2 {
+  margin-bottom: 44px;
+}
+@media (min-width: 768px) {
+  .section-contacts h2 {
+    margin-bottom: 62px;
+    margin-left: 32px;
+  }
+}
+@media (min-width: 1200px) {
+  .section-contacts h2 {
+    margin-bottom: 65px;
+    margin-left: 0;
+  }
+}
+.section-contacts .container {
+  position: relative;
+}
+.contacts-bg-img {
+  display: none;
+}
+@media (min-width: 1200px) {
+  .contacts-bg-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 600px;
+    height: 290px;
+    top: 142px;
+    left: -490px;
+    background-image: url(../img/main/contacts/bg-oval.jpg);
+    background-size: auto;
+    background-position: center;
+    background-repeat: repeat;
+  }
+}
+.contacts-row {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+@media (min-width: 768px) {
+  .contacts-row {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.contacts-desc {
+  width: 100%;
+  margin-bottom: 46px;
+}
+@media (min-width: 768px) {
+  .contacts-desc {
+    width: 50%;
+    padding-right: 50px;
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts-desc {
+    padding-right: 50px;
+    padding-top: 22px;
+  }
+}
+.contacts-paragraph {
+  margin-bottom: 23px;
+}
+@media (min-width: 768px) {
+  .contacts-paragraph {
+    margin-bottom: 33px;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts-paragraph {
+    margin-bottom: 44px;
+  }
+}
+.contacts-paragraph p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.625;
+  margin-bottom: 15px;
+}
+.contacts-paragraph p:last-child {
+  margin-bottom: 0;
+}
+@media (min-width: 768px) {
+  .contacts-paragraph p {
+    font-size: 18px;
+    line-height: 1.6;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts-paragraph p {
+    font-size: 20px;
+  }
+}
+.contacts-list {
+  margin-bottom: 36px;
+}
+@media (min-width: 1200px) {
+  .contacts-list {
+    margin-bottom: 47px;
+  }
+}
+.contacts-list-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+.contacts-list-item:last-child {
+  margin-bottom: 0;
+}
+@media (min-width: 1200px) {
+  .contacts-list-item {
+    flex-direction: row;
+    margin-bottom: 27px;
+  }
+}
+.contact-name {
+  margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: 700;
+}
+@media (min-width: 1200px) {
+  .contact-name {
+    margin-bottom: 0;
+    width: 165px;
+    margin-right: 30px;
+    font-size: 20px;
+  }
+}
+.contact-desc {
+  font-size: 18px;
+  font-weight: 500;
+  color: #96969d;
+}
+@media (min-width: 1200px) {
+  .contact-desc {
+    font-size: 20px;
+  }
+}
+.contact-desc a {
+  color: #96969d;
+  border-bottom: 1px solid  #96969d;
+}
+.contact-desc a:hover {
+  color: var(--link);
+  border-bottom: 1px solid var(--link);
+}
+.contact-desc a:active {
+  color: var(--border);
+  border-bottom: 1px solid var(--border);
+}
+.contacts-form-row {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .contacts-form-row {
+    width: 50%;
+    padding-top: 6px;
+    padding-left: 16px;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts-form-row {
+    width: 50%;
+    padding-left: 37px;
+    padding-top: 0;
+  }
+}
+.contacts-form {
+  width: 100%;
+  padding-top: 52px;
+  padding-bottom: 40px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #fff;
+  box-shadow: 0px 28px 100px 0px #c2dbeb;
+}
+@media (min-width: 768px) {
+  .contacts-form {
+    width: 338px;
+    padding-left: 25px;
+    padding-right: 15px;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts-form {
+    width: 511px;
+    padding-top: 74px;
+    padding-bottom: 40px;
+    padding-left: 62px;
+    padding-right: 60px;
+  }
+}
+.form-item {
+  position: relative;
+}
+.form-item + .form-item {
+  margin-top: 36px;
+}
+@media (min-width: 1200px) {
+  .form-item + .form-item {
+    margin-top: 54px;
+  }
+}
+.form-field {
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #bcbcbc;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 700;
+  transition: 0.5s;
+}
+.form-field:active,
+.form-field:focus {
+  border-bottom: 2px solid var(--border);
+}
+textarea.form-field {
+  height: 121px;
+}
+.form-btn {
+  margin-top: 17px;
+  text-align: center;
+  line-height: 46px;
+}
+@media (min-width: 768px) {
+  .form-btn {
+    margin-left: -10px;
+  }
+}
+@media (min-width: 1200px) {
+  .form-btn {
+    text-align: left;
+    margin-top: 35px;
+    margin-left: -5px;
+  }
+}
+.form-btn .btn {
+  line-height: 46px;
+  font-size: 20px;
+  padding: 0 70px;
+}
+@media (min-width: 768px) {
+  .form-btn .btn {
+    padding: 0 85px;
+  }
+}
+@media (min-width: 1200px) {
+  .form-btn .btn {
+    line-height: 56px;
+    font-size: 22px;
+    padding: 0 38px;
+  }
+}
+.fake-placeholder {
+  position: absolute;
+  top: 13px;
+  left: 2px;
+  pointer-events: none;
+  transition: 0.5s;
+  font-size: 20px;
+  font-weight: 700;
+  color: #bcbcbc;
+}
+.fake-placeholder.last {
+  top: 4px;
+}
+.fake-placeholder.active {
+  top: -15px;
+  font-size: 16px;
+  color: #ed9626;
+}
+.fake-placeholder.last.active {
+  top: -25px;
+}
+.error {
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--border);
+}
+.footer {
+  padding-top: 35px;
+  padding-bottom: 35px;
+  background-color: #333333;
+}
+@media (min-width: 1200px) {
+  .footer {
+    padding-top: 25px;
+    padding-bottom: 35px;
+  }
+}
+.footer h3 {
+  margin-bottom: 14px;
+  color: #fff;
+}
+@media (min-width: 768px) {
+  .footer h3 {
+    margin-bottom: 17px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer h3 {
+    margin-bottom: 17px;
+  }
+}
+.footer p {
+  color: #8f8f8f;
+  margin-bottom: 7px;
+  line-height: 1.5;
+}
+@media (min-width: 768px) {
+  .footer p {
+    line-height: 1.2;
+  }
+}
+.footer a {
+  color: #8f8f8f;
+  border-bottom: 1px solid #8f8f8f;
+  transition: 0.3s;
+}
+.footer a:hover,
+.footer a:active {
+  color: #fff;
+  border-bottom: 1px solid #fff;
 }
 /*# sourceMappingURL=main.css.map */
