--- a/docs/less/_blocks/_portfolio-card.less
+++ b/docs/less/_blocks/_portfolio-card.less
@@ -30,6 +30,14 @@
     }
 }
 
+.hide-card {
+    display: none;
+
+    @media (min-width: 1200px) {
+        display: block;
+    }
+}
+
 .portfolio-card-img {
     position: relative;
     margin-bottom: 26px;
