--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -1,4 +1,5 @@
 @import "./_blocks/_base.less";
+@import "./_blocks/_page-nav.less";
 @import "./_blocks/_mobile-menu.less";
 @import "./_blocks/_header.less";
 @import "./_blocks/_gamburger.less";
