--- a/docs/less/_blocks/_contacts-form.less
+++ b/docs/less/_blocks/_contacts-form.less
@@ -121,3 +121,15 @@ textarea.form-field {
     font-weight: 700;
     color: var(--border);
 }
+
+.contact-form__success {
+    font-size: 14px;
+    line-height: 1.6;
+    font-weight: 400;
+    color: #000;
+   
+    @media (min-width: 1200px) {
+        font-size: 16px;
+        margin-top: 15px;
+    }
+}
