fixes Section Portfolio + FancyBox

--- a/docs/less/_blocks/_base.less
+++ b/docs/less/_blocks/_base.less
@@ -85,8 +85,16 @@ button {
     padding: 0px 15px;
     margin: 0 auto;
 
+    @media (min-width: 576px) {
+        max-width: 540px;
+    }
+
     @media (min-width: 768px) {
         max-width: 738px;
+    }
+
+    @media (min-width: 992px) {
+        max-width: 960px;
     }
     
     @media (min-width: 1200px) {
