--- a/docs/less/_blocks/_portfolio-card.less
+++ b/docs/less/_blocks/_portfolio-card.less
@@ -2,9 +2,18 @@
     display: block;
     overflow: hidden;
     transition: 0.5s;
+    text-align: start;
+
+    @media (min-width: 576px) {
+        max-width: 340px;
+    }
 
     @media (min-width: 768px) {
         max-width: 340px;
+    }
+
+    @media (min-width: 992px) {
+        max-width: 450px;
     }
     
     @media (min-width: 1200px) {
@@ -20,7 +29,7 @@
             transform: translatey(0);
         }
 
-        .portfolio-card-title h3 {
+        .portfolio-card-title h3, a {
             color: var(--border);
 
             &::before {
@@ -28,6 +37,44 @@
             }
         }
     }
+}
+
+.portfolio-card {
+    margin-bottom: 49px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
+    @media (min-width: 768px) {
+        margin-bottom: 44px;
+
+        &:nth-last-child(2) {
+            margin-bottom: 0;
+        }
+    }
+    
+    @media (min-width: 1200px) {
+        margin-bottom: 63px;
+
+        &:nth-last-child(3) {
+            margin-bottom: 0;
+        }
+    }
+    
+    &:nth-child(odd) {
+        @media (min-width: 768px) {
+            margin-right: 28px;
+        }
+
+        @media (min-width: 992px) {
+            margin-right: 30px;
+        }
+
+        @media (min-width: 1200px) {
+            margin-right: 0;
+        }
+    } 
 }
 
 .hide-card {
@@ -57,7 +104,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        transform: translatey(-100%);
+        transform: translatey(-105%);
         background-color: rgba(251, 220, 77, 0.85);
         z-index: 1;
         transition: 0.5s;
@@ -110,6 +157,10 @@
         transition: 0.5s;
         width: fit-content;
 
+        a {
+            transition: 0.5s;
+        }
+
         &::before {
             position: absolute;
             display: block;
@@ -149,8 +200,10 @@
 
 
 .portfolio-card-big {
-    @media (min-width: 768px) {
         max-width: 340px;
+
+    @media (min-width: 992px) {
+        max-width: 450px;
     }
     
     @media (min-width: 1200px) {
