--- a/docs/less/_blocks/_portfolio.less
+++ b/docs/less/_blocks/_portfolio.less
@@ -6,7 +6,12 @@
     padding-top: 52px;
     padding-bottom: 95px;
 
+    @media (min-width: 576px) {
+        text-align: center;
+    }
+
     @media (min-width: 768px) {
+        text-align: start;
         padding-top: 69px;
         padding-bottom: 78px;
     }
@@ -62,42 +67,19 @@
 .portfolio-cards-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 43px;
 
     @media (min-width: 768px) {
+        justify-content: space-between;
         margin-bottom: 38px;
     }
     
     @media (min-width: 1200px) {
         margin-bottom: 0;
     }
-
-    a {
-        margin-bottom: 49px;
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-
-        @media (min-width: 768px) {
-            margin-bottom: 44px;
-
-            &:nth-last-child(2) {
-                margin-bottom: 0;
-            }
-        }
-        
-        @media (min-width: 1200px) {
-            margin-bottom: 63px;
-
-            &:nth-last-child(3) {
-                margin-bottom: 0;
-            }
-        }
-    }
 }
-
+  
 .all-jobs-link {
     padding-left: 3px;
     font-size: 20px;
