--- a/docs/less/_blocks/_mobile-menu.less
+++ b/docs/less/_blocks/_mobile-menu.less
@@ -1,12 +1,12 @@
 .mobile-menu {
     position: fixed;
-    top: 0;
+    top: 75px;
     bottom: 0;
     right: 0;
     width: 100%;
     max-width: 320px;
     background-color: #fff;
-    z-index: 17;
+    z-index: 99;
     transform: translateX(100%);
     transition: 0.5s;
 
