--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -273,13 +273,13 @@ button {
 }
 .mobile-menu {
   position: fixed;
-  top: 0;
+  top: 75px;
   bottom: 0;
   right: 0;
   width: 100%;
   max-width: 320px;
   background-color: #fff;
-  z-index: 17;
+  z-index: 99;
   -webkit-transform: translateX(100%);
      -moz-transform: translateX(100%);
       -ms-transform: translateX(100%);
@@ -423,6 +423,15 @@ button {
           backdrop-filter: blur(5px);
 }
 .header-main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 95;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+     -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -441,7 +450,7 @@ button {
   max-width: 1430px;
   padding-left: 21px;
   padding-right: 34px;
-  height: 109px;
+  height: 75px;
   margin: 0 auto;
 }
 @media (min-width: 768px) {
@@ -452,6 +461,14 @@ button {
 }
 @media (min-width: 1200px) {
   .header-main {
+    position: relative;
+    top: auto;
+    left: auto;
+    right: auto;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+            box-shadow: none;
     height: 185px;
     padding-left: 15px;
     padding-right: 15px;
@@ -562,10 +579,8 @@ button {
 .icon-vk:active {
   color: #45668e;
 }
-@media (min-width: 768px) {
-  .header-center {
-    padding-top: 40px;
-  }
+.header-center {
+  padding-top: 140px;
 }
 @media (min-width: 1200px) {
   .header-center {
@@ -585,6 +600,11 @@ button {
      -moz-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
   z-index: 3;
 }
@@ -679,27 +699,33 @@ button {
   }
 }
 .header-foto {
-  background-image: url(../img/main/header/foto.jpg);
-  background-repeat: no-repeat;
-  width: 100%;
+  width: 290px;
   height: 290px;
   margin-bottom: 51px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+}
+@media (min-width: 576px) {
+  .header-foto {
+    width: 410px;
+    height: 410px;
+  }
 }
 @media (min-width: 768px) {
   .header-foto {
     width: 50%;
-    margin-left: 39px;
+    width: 290px;
+    height: 290px;
+    margin-left: auto;
     margin-bottom: 0;
   }
 }
 @media (min-width: 1200px) {
   .header-foto {
     z-index: 9;
-    height: auto;
-    margin-top: 26px;
-    background-image: url(../img/main/header/foto-deck.jpg);
-    background-repeat: no-repeat;
-    background-position: right;
+    width: 410px;
+    height: 410px;
   }
 }
 @media (min-width: 1200px) {
@@ -984,7 +1010,7 @@ button {
   background-color: #f4f8f9;
 }
 .portfolio-row {
-  padding-top: 52px;
+  padding-top: 80px;
   padding-bottom: 95px;
 }
 @media (min-width: 576px) {
@@ -995,7 +1021,6 @@ button {
 @media (min-width: 768px) {
   .portfolio-row {
     text-align: start;
-    padding-top: 69px;
     padding-bottom: 78px;
   }
 }
@@ -1077,43 +1102,6 @@ button {
     margin-bottom: 0;
   }
 }
-@media (min-width: 768px) {
-  .portfolio-cards-row .portfolio-card:nth-child(odd) {
-    margin-right: 28px;
-  }
-}
-@media (min-width: 992px) {
-  .portfolio-cards-row .portfolio-card:nth-child(odd) {
-    margin-right: 30px;
-  }
-}
-@media (min-width: 1200px) {
-  .portfolio-cards-row .portfolio-card:nth-child(odd) {
-    margin-right: 0;
-  }
-}
-.portfolio-cards-row .portfolio-card {
-  margin-bottom: 49px;
-}
-.portfolio-cards-row .portfolio-card:last-child {
-  margin-bottom: 0;
-}
-@media (min-width: 768px) {
-  .portfolio-cards-row .portfolio-card {
-    margin-bottom: 44px;
-  }
-  .portfolio-cards-row .portfolio-card:nth-last-child(2) {
-    margin-bottom: 0;
-  }
-}
-@media (min-width: 1200px) {
-  .portfolio-cards-row .portfolio-card {
-    margin-bottom: 63px;
-  }
-  .portfolio-cards-row .portfolio-card:nth-last-child(3) {
-    margin-bottom: 0;
-  }
-}
 .all-jobs-link {
   padding-left: 3px;
   font-size: 20px;
@@ -1125,11 +1113,6 @@ button {
     padding-left: 5px;
   }
 }
-@media (min-width: 1200px) {
-  .all-jobs-link {
-    display: none;
-  }
-}
 .all-jobs-link:hover {
   color: var(--link);
   border-bottom: 1px solid var(--link);
@@ -1137,6 +1120,14 @@ button {
 .all-jobs-link:active {
   color: var(--border);
   border-bottom: 1px solid var(--border);
+}
+@media (min-width: 1200px) {
+  a.all-jobs-link {
+    display: none;
+  }
+}
+a.hide-link {
+  display: none;
 }
 .portfolio-card {
   display: block;
@@ -1188,6 +1179,43 @@ button {
 .portfolio-card:hover .portfolio-card-title h3::before,
 .portfolio-card:hover a::before {
   width: 100%;
+}
+.portfolio-card {
+  margin-bottom: 49px;
+}
+.portfolio-card:last-child {
+  margin-bottom: 0;
+}
+@media (min-width: 768px) {
+  .portfolio-card {
+    margin-bottom: 44px;
+  }
+  .portfolio-card:nth-last-child(2) {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .portfolio-card {
+    margin-bottom: 63px;
+  }
+  .portfolio-card:nth-last-child(3) {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 768px) {
+  .portfolio-card:nth-child(odd) {
+    margin-right: 28px;
+  }
+}
+@media (min-width: 992px) {
+  .portfolio-card:nth-child(odd) {
+    margin-right: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .portfolio-card:nth-child(odd) {
+    margin-right: 0;
+  }
 }
 .hide-card {
   display: none;
@@ -1393,6 +1421,7 @@ button {
   padding-top: 54px;
   padding-bottom: 15px;
   text-align: center;
+  overflow: hidden;
 }
 @media (min-width: 768px) {
   .section-work {
@@ -1699,13 +1728,12 @@ p.work-timeline-time {
   position: relative;
   overflow: hidden;
   background-color: #f4f8f9;
-  padding-top: 48px;
+  padding-top: 80px;
   padding-bottom: 60px;
   text-align: center;
 }
 @media (min-width: 768px) {
   .section-contacts {
-    padding-top: 77px;
     padding-bottom: 85px;
   }
 }
