--- a/docs/less/_blocks/_portfolio.less
+++ b/docs/less/_blocks/_portfolio.less
@@ -3,7 +3,7 @@
 }
 
 .portfolio-row {
-    padding-top: 52px;
+    padding-top: 80px;
     padding-bottom: 95px;
 
     @media (min-width: 576px) {
@@ -12,7 +12,6 @@
 
     @media (min-width: 768px) {
         text-align: start;
-        padding-top: 69px;
         padding-bottom: 78px;
     }
     
@@ -90,10 +89,6 @@
         padding-left: 5px;
     }
     
-    @media (min-width: 1200px) {
-        display: none;
-    }
-
     &:hover {
         color: var(--link);
         border-bottom: 1px solid var(--link);
@@ -103,5 +98,16 @@
         color: var(--border);
         border-bottom: 1px solid var(--border);
     }
+}
+
+a.all-jobs-link {
+
+    @media (min-width: 1200px) {
+        display: none;
+    }
+}
+
+a.hide-link {
+    display: none;
 }
   
