--- a/docs/less/_blocks/_section-work.less
+++ b/docs/less/_blocks/_section-work.less
@@ -3,6 +3,7 @@
     padding-bottom: 15px;
 
     text-align: center;
+    overflow: hidden;
 
     @media (min-width: 768px) {
         padding-top: 80px;
