--- a/docs/less/_blocks/_header.less
+++ b/docs/less/_blocks/_header.less
@@ -145,11 +145,11 @@
     }
 }
 
-.icon-instagram {
+.icon-telegram-header {
     width: 30px;
 
     &:hover, &:active {
-        color: #0077b5;
+        color: #0088cc;
     }
 }
 
