--- a/docs/less/_blocks/_portfolio-card.less
+++ b/docs/less/_blocks/_portfolio-card.less
@@ -1,7 +1,6 @@
 .portfolio-card {
     display: block;
     overflow: hidden;
-    transition: 0.5s;
     text-align: start;
 
     @media (min-width: 576px) {
@@ -18,24 +17,6 @@
     
     @media (min-width: 1200px) {
         max-width: 360px;
-    }
-
-    &:hover {
-        .portfolio-card-img button {
-            transform: translate(-50%,-50%);
-        }
-
-        .portfolio-card-img::before {
-            transform: translatey(0);
-        }
-
-        .portfolio-card-title h3, a {
-            color: var(--border);
-
-            &::before {
-                width: 100%;
-            }
-        }
     }
 }
 
@@ -136,6 +117,16 @@
             background-color: #d4423b;
         }
     }
+
+    &:hover {
+        button {
+            transform: translate(-50%,-50%);
+        }
+
+        &::before {
+            transform: translatey(0);
+        }
+    }
 }
 
 .portfolio-card-title {
@@ -149,6 +140,12 @@
         padding-left: 0;
     }
 
+    &:hover {
+        h3 {
+            color: var(--border);
+        }
+    }
+
     h3 {
         position: relative;
         margin-bottom: 11px;
@@ -156,22 +153,6 @@
         font-weight: 700;
         transition: 0.5s;
         width: fit-content;
-
-        a {
-            transition: 0.5s;
-        }
-
-        &::before {
-            position: absolute;
-            display: block;
-            content: "";
-            height: 2px;
-            width: 0;
-            bottom: 0;
-            left: 0;
-            background-color: var(--border);
-            transition: 0.5s;
-        }
 
         @media (min-width: 768px) {
             font-size: 24px;
