--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -187,6 +187,73 @@ button {
   border-color: #181818;
   background-color: #fff;
 }
+.animate {
+  position: relative;
+  overflow: hidden;
+}
+.animate::after {
+  content: "";
+  position: absolute;
+  left: -50px;
+  top: -50px;
+  width: 20px;
+  height: 150px;
+  -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+       -o-transform: rotate(45deg);
+          transform: rotate(45deg);
+  background: -o-linear-gradient(227deg, rgba(255, 255, 255, 0.25) 6%, rgba(255, 255, 255, 0.75) 70%);
+  background: -webkit-linear-gradient(223deg, rgba(255, 255, 255, 0.25) 6%, rgba(255, 255, 255, 0.75) 70%);
+  background: -moz-linear-gradient(223deg, rgba(255, 255, 255, 0.25) 6%, rgba(255, 255, 255, 0.75) 70%);
+  background: -o-linear-gradient(223deg, rgba(255, 255, 255, 0.25) 6%, rgba(255, 255, 255, 0.75) 70%);
+  background: linear-gradient(227deg, rgba(255, 255, 255, 0.25) 6%, rgba(255, 255, 255, 0.75) 70%);
+  z-index: 5;
+  -webkit-animation-name: btnAnimate;
+     -moz-animation-name: btnAnimate;
+       -o-animation-name: btnAnimate;
+          animation-name: btnAnimate;
+  -webkit-animation-duration: 4s;
+     -moz-animation-duration: 4s;
+       -o-animation-duration: 4s;
+          animation-duration: 4s;
+  -webkit-animation-iteration-count: infinite;
+     -moz-animation-iteration-count: infinite;
+       -o-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+@-webkit-keyframes btnAnimate {
+  0% {
+    left: -5%;
+  }
+  100% {
+    left: 110%;
+  }
+}
+@-moz-keyframes btnAnimate {
+  0% {
+    left: -5%;
+  }
+  100% {
+    left: 110%;
+  }
+}
+@-o-keyframes btnAnimate {
+  0% {
+    left: -5%;
+  }
+  100% {
+    left: 110%;
+  }
+}
+@keyframes btnAnimate {
+  0% {
+    left: -5%;
+  }
+  100% {
+    left: 110%;
+  }
+}
 .underline {
   position: relative;
   display: inline-block;
@@ -233,6 +300,31 @@ button {
 }
 .icon-telegram:hover {
   color: #039be5;
+}
+#backTop {
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  z-index: 5;
+  display: block;
+  color: var(--border);
+  height: 40px;
+  width: 40px;
+  -webkit-border-radius: 50%;
+     -moz-border-radius: 50%;
+          border-radius: 50%;
+  border: 1px solid #fff;
+  background-color: #fff;
+}
+#backTop svg {
+  width: 40px;
+}
+#backTop:hover {
+  background-color: var(--border);
+  border: 1px solid var(--border);
+}
+#backTop:hover svg {
+  color: #fff;
 }
 #page-nav {
   display: none;
@@ -689,18 +781,36 @@ button {
 }
 @media (min-width: 1200px) {
   .about-btn-row {
-    display: block;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
   }
-  .about-btn-row a {
+  .about-btn-row .animate {
     margin-right: 13px;
   }
-  .about-btn-row a:last-child {
-    margin-right: 0;
+}
+.summary {
+  margin-top: 30px;
+}
+.summary .btn {
+  font-size: 20px;
+  line-height: 48px;
+}
+.summary .btn svg {
+  width: 22px;
+  margin-right: 15px;
+}
+@media (min-width: 1200px) {
+  .summary .btn {
+    line-height: 56px;
+    font-size: 22px;
   }
 }
 .header-foto {
   width: 290px;
-  height: 290px;
+  height: 330px;
   margin-bottom: 51px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -709,14 +819,14 @@ button {
 @media (min-width: 576px) {
   .header-foto {
     width: 410px;
-    height: 410px;
+    height: 450px;
   }
 }
 @media (min-width: 768px) {
   .header-foto {
     width: 50%;
     width: 290px;
-    height: 290px;
+    height: 330px;
     margin-left: auto;
     margin-bottom: 0;
   }
@@ -725,7 +835,7 @@ button {
   .header-foto {
     z-index: 9;
     width: 410px;
-    height: 410px;
+    height: 510px;
   }
 }
 @media (min-width: 1200px) {
