--- a/docs/less/_blocks/_portfolio.less
+++ b/docs/less/_blocks/_portfolio.less
@@ -68,14 +68,18 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 43px;
+    column-gap: 30px;
+    row-gap: 49px;
 
     @media (min-width: 768px) {
-        justify-content: space-between;
+        justify-content: start;
         margin-bottom: 38px;
+        row-gap: 44px;
     }
     
     @media (min-width: 1200px) {
         margin-bottom: 0;
+        row-gap: 63px;
     }
 }
   
