--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -758,6 +758,7 @@ button {
   }
 }
 .about-desk {
+  margin-bottom: 15px;
   font-size: 18px;
   font-weight: 500;
   color: #393f47;
@@ -777,22 +778,22 @@ button {
   margin-bottom: 0;
 }
 .about-btn-row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.about-btn-row > a {
   display: none;
 }
 @media (min-width: 1200px) {
-  .about-btn-row {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
+  .about-btn-row > a {
+    display: inline-block;
   }
   .about-btn-row .animate {
     margin-right: 13px;
   }
-}
-.summary {
-  margin-top: 30px;
 }
 .summary .btn {
   font-size: 20px;
@@ -1196,20 +1197,26 @@ button {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 43px;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
+  row-gap: 49px;
 }
 @media (min-width: 768px) {
   .portfolio-cards-row {
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-       -moz-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: start;
+    -webkit-justify-content: start;
+       -moz-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
     margin-bottom: 38px;
+    row-gap: 44px;
   }
 }
 @media (min-width: 1200px) {
   .portfolio-cards-row {
     margin-bottom: 0;
+    row-gap: 63px;
   }
 }
 .all-jobs-link {
@@ -1246,12 +1253,7 @@ a.hide-link {
 }
 @media (min-width: 576px) {
   .portfolio-card {
-    max-width: 340px;
-  }
-}
-@media (min-width: 768px) {
-  .portfolio-card {
-    max-width: 340px;
+    max-width: 339px;
   }
 }
 @media (min-width: 992px) {
@@ -1262,43 +1264,6 @@ a.hide-link {
 @media (min-width: 1200px) {
   .portfolio-card {
     max-width: 360px;
-  }
-}
-.portfolio-card {
-  margin-bottom: 49px;
-}
-.portfolio-card:last-child {
-  margin-bottom: 0;
-}
-@media (min-width: 768px) {
-  .portfolio-card {
-    margin-bottom: 44px;
-  }
-  .portfolio-card:nth-last-child(2) {
-    margin-bottom: 0;
-  }
-}
-@media (min-width: 1200px) {
-  .portfolio-card {
-    margin-bottom: 63px;
-  }
-  .portfolio-card:nth-last-child(3) {
-    margin-bottom: 0;
-  }
-}
-@media (min-width: 768px) {
-  .portfolio-card:nth-child(odd) {
-    margin-right: 28px;
-  }
-}
-@media (min-width: 992px) {
-  .portfolio-card:nth-child(odd) {
-    margin-right: 30px;
-  }
-}
-@media (min-width: 1200px) {
-  .portfolio-card:nth-child(odd) {
-    margin-right: 0;
   }
 }
 .hide-card {
@@ -1444,7 +1409,7 @@ a.hide-link {
   }
 }
 .portfolio-card-big {
-  max-width: 340px;
+  max-width: 339px;
 }
 @media (min-width: 992px) {
   .portfolio-card-big {
